--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -3,9 +3,9 @@ from alpine:latest
 RUN apk add --no-cache python3-dev \
     && pip3 install --upgrade pip
     
-WORKDIR /app 
+WORKDIR /app/server
 
-COPY . /app
+COPY . /app/server
 
 RUN pip3 --no-cache-dir install -r requirements.txt
 
