--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,13 +1,13 @@
-from alpine:latest
+from python:3.6-slim
 
-RUN apk add --no-cache python3-dev \
-    && pip3 install --upgrade pip
+# RUN apk add --no-cache python3-dev \
+#     && pip3 install --upgrade pip
     
 WORKDIR /app/server
 
 COPY . /app/server
 
-RUN pip3 --no-cache-dir install -r requirements.txt
+RUN pip install -r requirements.txt
 
 EXPOSE 5000
 
