--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -1,4 +1,5 @@
+pandas==0.23.4
+shelljob==0.5.6
 Flask==1.1.1
 Werkzeug==1.0.0
-shelljob==0.5.6
-mysql-connector==2.2.9
+mysql_connector_repackaged==0.3.1
