vid serve bug fixed

--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,4 +1,4 @@
-from python:3.6-slim
+from python:3.7-slim
 
 # RUN apk add --no-cache python3-dev \
 #     && pip3 install --upgrade pip
@@ -7,7 +7,7 @@ WORKDIR /app/server
 
 COPY . /app/server
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5000
 
