--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -2,4 +2,6 @@ pandas==0.23.4
 shelljob==0.5.6
 Flask==1.1.1
 Werkzeug==1.0.0
-mysql_connector_repackaged==0.3.1
+# mysql_connector_repackaged==0.3.1
+mysql-connector-python==8.0.17
+
